# safai_chatbot_cursor

./: .env_example  .gitignore  API_README.md  MESSENGER_SETUP.md  POSTGRESQL_SETUP.md  README.md  chat_ui.py  database.py  init_tables.py  main.py  models.py  pyproject.toml  requirements.txt  safai_rag_langgraph.py  system_prompt.txt  vectorDB_create.py
deployment/: NGINX_SETUP.md  UV_DEPLOYMENT.md  nginx-safai-api.conf  nginx-safai-combined-alt.conf  nginx-safai-combined.conf  quick-start.sh  safai-api.service
routers/: messenger_webhook.py
services/: messenger_service.py  session_service.py  user_service.py
utils/: phone_validator.py
